packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/printstacktrace/PrintStackTraceCase.java
package sample.bad;

class PrintStackTraceCase {
    void print(Exception e) {
        e.printStackTrace();
    }
}
